@@ -25,14 +25,15 @@
 %
 
 @book{Gupta,
- author    = {K. C. Gupta and Ramesh Garg and I. J. Bahl},
+ author    = {Kuldip C. Gupta and Ramesh Garg and I. J. Bahl},
  title     = "{Microstrip Lines and Slotlines}",
  publisher = {Artech House, Inc.},
  year      = {1979},
 }
 
 @book{Gupta1,
- author    = {K. C. Gupta and Ramesh Garg and Inder Bahl and Prakash Bhartia},
+ author    = {Kuldip C. Gupta and Ramesh Garg and Inder J. Bahl and
+              Prakash Bhartia},
  title     = "{Microstrip Lines and Slotlines}",
  edition   = {second},
  publisher = {Artech House, Inc.},
@@ -664,7 +665,7 @@
 }
 
 @article{Garg,
- author  = {Ramesh Garg and I. J. Bahl},
+ author  = {Ramesh Garg and Inder J. Bahl},
  title   = "{Characteristics of Coupled Microstriplines}",
  journal = IEEETMTT,
  volume  = {27},
