@@ -1,3 +1,8 @@
+2004-09-02  Stefan Jahn  <stefan@lkcc.org>
+
+	* microstrip/mscoupled.cpp: Fixed bug in microstrip coupled
+	characteristic impedances computation.
+
 2004-09-01  Stefan Jahn  <stefan@lkcc.org>
 
 	* microstrip/msline.cpp: Put some more Hammerstad equations
